CVS-20091208
+ [APOT] fix invariant potentials

CVS-20091202
+ fix more uninitialized values
+ [APOT] fix rare segfault with universal function
+ evolution algorithm polished

CVS-20091120
+ [APOT] fix punishments for pair potentials
+ fix some memory leaks (experimental, may break mpi)
+ [APOT] add evolutionary algorithm for testing purposes (activate with _evo target)
+ fix uninitialized values

CVS-20091012
+ don't write punishments if opt=0
+ [APOT] fix cp_ detection with element names

CVS-20090925
+ [APOT] more fixes for EAM
+ [APOT] fix spline calculation
+ minor code cleanups
+ [APOT] fix range for embedding function in plot files
+ [APOT] fix mpi with new grad function

CVS-20090912
+ fix compilation without EAM
+ [APOT] be quiet about compnodes if no cn is found in potential file
+ [APOT] improve cp_ and cn output in potential files
+ [APOT] read arbitrary lines of comments
+ [APOT] write cutoff function to potential file
+ temporary fix for spline extrapolation
+ [APOT] fix invstep for potentials
+ [APOT] fix next severe eam bug, how could this ever work?

CVS-20090902
+ [APOT] clean up internal punishments
+ pointers to important positions in force-vector added
+ improved output of punishment constraints
+ [apot] fix eopp parameter check

CVS-20090831
+ print error messages to stderr (setup)

CVS-20090819
+ [APOT] fix severe _sc bug
+ [APOT] override manual input for embedding function cutoff
+ be more precise about unexpected end of files
+ [APOT] fix _sc detection
+ [APOT] adjust imd-output to new cutoff

CVS-20090717
+ code cleanup in forces.c
+ add punishments to force-array for powell_lsq

CVS-20090706
+ potfit writes the #C line also for potentials of format 3+4
+ fix element detection for configurations containing only 1 element
+ more fixes for element and configuratiion mismatch detection
+ removed code for increased cutoff completely, cubic cutoff function always cuts at rcut
+ [APOT] fix punishment for "universal"

CVS-20090616